--- a/Desktop/projects/notes-are-kee/package.json
+++ b/Desktop/projects/notes-are-kee/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "note-taker",
+  "name": "notes-are-kee",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "expres": "^0.0.5",
+    "express": "^4.17.2",
+    "uuid": "^8.3.2"
   }
 }
